# TELE

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
include/: csv.hpp
src/: main.cc  main.cpp
src/data/: Coordinate.cc  Coordinate.hh  Export.cc  Export.hh  Image.cc  Image.hh
src/gui/: Imageviewer.cc  Imageviewer.hh  imageviewer.cc  imageviewer.hh
src/maths/: Convert.cc  Convert.hh
src/metadata/: GeoTaggedImage.cc  GeoTaggedImage.hh  GeoTaggedImageList.cc  GeoTaggedImageList.hh
src/misc/: Singleton.cc  Singleton.hh  misc.cc  misc.hh  singleton.cc  singleton.hh
